# coworkingroom-camera-system

./: .gitignore  README.md  camera.cpp  camera.h  esp32cam.ino  motion.cpp  motion.h  netwifi.cpp  netwifi.h  secrets.h.example  server.py  telegram_config.example.py  uploader.cpp  uploader.h
vision/: config.example.toml  pyproject.toml
vision/docs/: deployment.md  design.md  linting.md
vision/src/stuhi_vision/: __init__.py  __main__.py  assembly.py  cli.py  config.py  detection.py  domain.py  doorway.py  handlers.py  ledger.py  photo_ingest.py  pipeline.py  preprocessing.py  quality.py  sessions.py  store.py  tracking.py  visualization.py
vision/src/stuhi_vision/recognition/: __init__.py  body.py  embeddings.py  face.py  gallery.py
vision/src/stuhi_vision/sources/: __init__.py  base.py  stream.py  video.py
vision/src/stuhi_vision/sql/: __init__.py  insert_event.sql  insert_sighting.sql  recent_events.sql  recent_sightings.sql  schema.sql  sightings_schema.sql
vision/tests/: test_config.py  test_doorway.py  test_embeddings.py  test_gallery.py  test_ledger.py  test_sighting_store.py  test_store.py
vision/tools/: lint_structure.py
